--- a/AR.js/three.js/examples/Augmented_systems.html
+++ b/AR.js/three.js/examples/Augmented_systems.html
@@ -284,7 +284,7 @@
 
          //end obj code
         ///////////////////////////////////////////////////////////
-        
+        //USE THIS CODE FOR EXPORTED CAMERA FROM MAYA
         
          ///////////////////////////////////////////////////////////
          //add obj model2 (static) with material textures
@@ -299,12 +299,12 @@
         THREE.Loader.Handlers.add( /\.dds$/i, new THREE.DDSLoader() );
         new THREE.MTLLoader()
             .setPath( '../../data/data/' )
-            .load( 'obj-material-test2.mtl', function ( materials ) {
+            .load( 'hal_robot.mtl', function ( materials ) {
                 materials.preload();
                 new THREE.OBJLoader()
                     .setMaterials( materials )
                     .setPath( '../../data/data/' )
-                    .load( 'obj-material-test2.obj', function ( object ) {
+                    .load( 'hal_robot.obj', function ( object ) {
                         object.scale.set(.4, .4, .4);
                         arWorldRoot.add( object );
                     }, onProgress, onError );
