--- a/AR.js/three.js/examples/Augmented_systems.html
+++ b/AR.js/three.js/examples/Augmented_systems.html
@@ -148,7 +148,8 @@
             ////////////////////////////////////////////////////////////////////////////////
             //   Add your custom image here and comment out existing file (hiro or kanji)
             ////////////////////////////////////////////////////////////////////////////////
-            patternUrl : THREEx.ArToolkitContext.baseURL + '../augmented-systems/pattern-marker.patt'
+            patternUrl : THREEx.ArToolkitContext.baseURL + '../data/data/patt.hiro'
+
             // patternUrl : THREEx.ArToolkitContext.baseURL + '../data/data/patt.kanji'
         })
         // build smoothedControls
