--- a/AR.js/three.js/examples/Augmented_systems.html
+++ b/AR.js/three.js/examples/Augmented_systems.html
@@ -306,7 +306,7 @@
                     .setMaterials( materials )
                     .setPath( '../augmented-systems/' )
                     .load( 'hal_robot.obj', function ( object ) {
-                        object.scale.set(.1, .1, .1);
+                        object.scale.set(3, 3, 3);
                         arWorldRoot.add( object );
                     }, onProgress, onError );
             } );
