--- a/augmented-systems/Augmented_systems.html
+++ b/augmented-systems/Augmented_systems.html
@@ -298,13 +298,13 @@
         var onError = function () { };
         THREE.Loader.Handlers.add( /\.dds$/i, new THREE.DDSLoader() );
         new THREE.MTLLoader()
-            .setPath( '../../data/data/' )
-            .load( 'object1_v2.mtl', function ( materials ) {
+            .setPath( '../augmented-systems/' )
+            .load( 'hal_robot.mtl', function ( materials ) {
                 materials.preload();
                 new THREE.OBJLoader()
                     .setMaterials( materials )
-                    .setPath( '../../data/data/' )
-                    .load( 'object1_v2.obj', function ( object ) {
+                    .setPath( '../augmented-systems/' )
+                    .load( 'hal_robot.obj', function ( object ) {
                         object.scale.set(.4, .4, .4);
                         arWorldRoot.add( object );
                     }, onProgress, onError );
