--- a/augmented-systems/Augmented_systems.html
+++ b/augmented-systems/Augmented_systems.html
@@ -120,7 +120,7 @@
         ////////////////////////////////////////////////////////////////////////////////
         // create atToolkitContext
         var arToolkitContext = new THREEx.ArToolkitContext({
-            cameraParametersUrl: THREEx.ArToolkitContext.baseURL + '../data/data/camera_para.dat',
+            cameraParametersUrl: THREEx.ArToolkitContext.baseURL + '../augmented-systems/camera_para.dat',
             detectionMode: 'mono',
             maxDetectionRate: 30,
             canvasWidth: 80*3,
