--- a/augmented-systems/augmented_systems.html
+++ b/augmented-systems/augmented_systems.html
@@ -287,7 +287,7 @@
         
         
          ///////////////////////////////////////////////////////////
-         //add obj model2 (static) with material textures
+         //add obj model2 (static) with material textures forcetest
 
         var onProgress = function ( xhr ) {
             if ( xhr.lengthComputable ) {
