--- a/Files/augmented_systems1.html
+++ b/Files/augmented_systems1.html
@@ -271,6 +271,8 @@
 
                      child.material.map = texture;
 
+                     mesh.rotation.set(new THREE.Vector3( 0, 0, Math.PI / 2));
+
                  }
 
              } );
