--- a/Files/augmented_systems1.html
+++ b/Files/augmented_systems1.html
@@ -275,7 +275,7 @@
 
              } );
 
- 					object.position.y = - 95;
+ 					// object.position.y = - 95;
  //					scene.add( object );
              object.scale.set(.6, .6, .6);
              arWorldRoot.add( object );
