--- a/Files/augmented_systems1.html
+++ b/Files/augmented_systems1.html
@@ -277,7 +277,7 @@
 
  					// object.position.y = - 95;
  //					scene.add( object );
-             object.scale.set(3, 3, 3);
+             object.scale.set(.6, .6, .6);
              arWorldRoot.add( object );
              //addrotate
         //      onRenderFcts.push(function(){
