--- a/Files/augmented_systems1.html
+++ b/Files/augmented_systems1.html
@@ -277,8 +277,8 @@
 
  					// object.position.y = - 95;
  //					scene.add( object );
-             // object.scale.set(.6, .6, .6);
-             // arWorldRoot.add( object );
+             object.scale.set(.6, .6, .6);
+             arWorldRoot.add( object );
              //addrotate
         //      onRenderFcts.push(function(){
         //     mesh.rotation.x += 0.1
