--- a/Files/augmented_systems1.html
+++ b/Files/augmented_systems1.html
@@ -277,7 +277,10 @@
 
  					// object.position.y = - 95;
  //					scene.add( object );
-             object.scale.set(.6, .6, .6);
+//             object.scale.set(.02, .02, .02); // Old code
+             //object.rotation.set(new THREE.Vector3( 0, 0, Math.PI / 2));
+             object.rotation.z = Math.PI / 2;
+             object.scale.set(.5, .5, .5);
              arWorldRoot.add( object );
              //addrotate
         //      onRenderFcts.push(function(){
