--- a/Files/augmented_systems1.html
+++ b/Files/augmented_systems1.html
@@ -263,7 +263,7 @@
          };
 
          var loader = new THREE.OBJLoader( manager );
-         loader.load( '../../../augmented-systems/hal_robot.fbx', function ( object ) {
+         loader.load( '../../../augmented-systems/hal_robot.obj', function ( object ) {
 
              object.traverse( function ( child ) {
 
