--- a/Files/augmented_systems1.html
+++ b/Files/augmented_systems1.html
@@ -282,6 +282,7 @@
              object.rotation.z = Math.PI / 2;
              object.scale.set(.5, .5, .5);
              object.position.y = - 10;
+             object.position.x = - 20;
              arWorldRoot.add( object );
              //addrotate
         //      onRenderFcts.push(function(){
