--- a/Files/augmented_systems1.html
+++ b/Files/augmented_systems1.html
@@ -281,7 +281,7 @@
              //object.rotation.set(new THREE.Vector3( 0, 0, Math.PI / 2));
              object.rotation.z = Math.PI / 2;
              object.scale.set(.5, .5, .5);
-             object.position.y = - 10;
+             // object.position.y = - 10;
              arWorldRoot.add( object );
              //addrotate
         //      onRenderFcts.push(function(){
